--- a/Views/Login/Login.cshtml
+++ b/Views/Login/Login.cshtml
@@ -3,17 +3,28 @@
     <div class="container">
         <main role="main" class="pb-3">
             <div>
-                <form method="post" asp-area="" asp-controller="Login" asp-action="ValidateUser">
-                    <div class="form-group">
+                <form method="post" asp-area="" asp-controller="Login" asp-action="ValidateUser" novalidate>
+                    <div class="row form-group my-2">
                         <label for="dataEmail">Email address</label>
                         <input type="email" class="form-control" id="dataEmail" aria-describedby="emailHelp" asp-for="Email">
                         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                     </div>
-                    <div class="form-group">
-                        <label for="dataPassword">Password</label>
-                        <input type="password" class="form-control" id="dataPassword" asp-for="Password">
+                    <div class="row my-2">
+                        <span asp-validation-for="Email" class="text-danger font-weight-bold"   ></span>
                     </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <div class="row form-group my-2">
+                        <label for="dataPassword">Password</label>
+                        <input type="password" class="form-control" id="dataPassword" aria-describedby="passwordHelpInline" asp-for="Password">
+                        <small id="passwordHelpInline" class="text-muted">
+                            Must be Mininum 8 characters long.
+                        </small>
+                    </div>
+                    <div class="row my-2">
+                        <span asp-validation-for="Password" class="text-danger font-weight-bold"></span>
+                    </div>
+                    <div class="row my-2">
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </div>
                 </form>
             </div>
         </main>
