--- a/Views/Login/Login.cshtml
+++ b/Views/Login/Login.cshtml
@@ -3,7 +3,7 @@
     <div class="container">
         <main role="main" class="pb-3">
             <div>
-                <form method="post" asp-area="" asp-controller="Login" asp-action="ValidateUser" novalidate>
+                <form method="post" asp-area="" asp-controller="Login" asp-action="Login" novalidate>
                     <div class="row form-group my-2">
                         <label for="dataEmail">Email address</label>
                         <input type="email" class="form-control" id="dataEmail" aria-describedby="emailHelp" asp-for="Email">
