--- a/Views/Task/Tasks.cshtml
+++ b/Views/Task/Tasks.cshtml
@@ -10,14 +10,14 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table table-bordered table-hover">
+<table class="table table-bordered table-hover" id="tasks-table">
     <thead class="thead-light">
         <tr>
             <th>
                 Id
             </th>
             <th>
-                Title            
+                Title
             </th>
             <th>
                 Description
@@ -33,7 +33,7 @@
         {
             foreach (var item in Model)
             {
-                <tr>
+                <tr data-id="@item.Id">
                     <td>
                         @Html.DisplayFor(modelItem => item.Id)
                     </td>
@@ -49,15 +49,39 @@
                     <td>
                         @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
                         @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                        <a class="text-primary click-pointer openDeleteModal" data-toggle="modal" data-target="#deleteModal" data-Id="@item.Id">
+                            Eliminar
+                        </a>
                     </td>
                 </tr>
             }
-        } else
-            {
-                <tr>
-                    <td colspan="5" class="text-center">No Tasks Saved</td>
-                </tr>
-            }
+        }
+        else
+        {
+            <tr>
+                <td colspan="5" class="text-center">No Tasks Saved</td>
+            </tr>
+        }
     </tbody>
 </table>
+
+<!-- Modal -->
+<div class="modal fade" id="deleteModal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="modalDeleteLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modalDeleteLabel">Delete Task</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Do you really want to delete this Task?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" id="ModalDelete">Accept</button>
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+            </div>
+        </div>
+    </div>
+</div>
