--- a/Views/Task/Tasks.cshtml
+++ b/Views/Task/Tasks.cshtml
@@ -49,7 +49,7 @@
                     <td>
                         @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
                         @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                        <a class="text-primary click-pointer openDeleteModal" data-toggle="modal" data-target="#deleteModal" data-Id="@item.Id">
+                        <a class="text-danger click-pointer openDeleteModal" data-toggle="modal" data-target="#deleteModal" data-Id="@item.Id">
                             Eliminar
                         </a>
                     </td>
